# Minnow

./: .gitmodules  README.md
Docs/: beaglebone_EM7180.md  beaglebone_motor_control.md  beaglebone_share_internet.md  beaglebone_usb_wifi.md  beaglebone_usb_wifi_script.md  beaglebone_zmq_app_compliation.md
src/cpp/: CMakeLists.txt  app_depth.cpp  app_gps.cpp  minnow_config.yaml
src/cpp/minnow_apps/: CMakeLists.txt  app_depth.cpp  app_gps.cpp  app_imu.cpp
src/cpp/minnow_comms/: CMakeLists.txt  minnow_app_threaded.cpp  minnow_app_threaded.h
src/cpp/minnow_drivers/: CMakeLists.txt
src/cpp/sandbox/pub_sub_testing/: CMakeLists.txt  config.yaml  minnow_app_threaded.cpp  minnow_app_threaded.h  minnow_app_threaded_test.cpp  minnow_broker.cpp  nav_topic1.fbs  nav_topic2.fbs  pub_nav_sub_pos.cpp  pub_nav_topic1_sub_nav_topic2.cpp  pub_nav_topic2_sub_nav_topic1.cpp  pub_pos_sub_nav.cpp  test_thread.cpp
src/cpp/sandbox/pub_sub_testing/topics/: nav_topic1_generated.h  nav_topic2_generated.h
src/fbs/: build_install.sh  motor_command.fbs  motor_value.fbs  nav_depth.fbs
src/low_level_control/: .gitignore  minnow_ControlSystemManager.py  minnow_HeadingControl.py  minnow_SurgeSpeedControl.py
src/pub_sub_testing/: minnow_pub_sub1.py  minnow_pub_sub2.py
src/python/: app_depth.py  app_gps.py  app_imu.py  app_motor.py  app_motor_contol.py  control.py  depth.py  gps.fbs  gps.py  imu.fbs  imu.py  imu_read.py  minnow_ControlSystemManager.py  motor.py  motor_command.fbs  nav_depth.fbs  nav_gps.fbs  nav_imu.fbs
src/python/backup/: control.py  depth.py  imu.py  imu_read.py  minnow_broker.py  motor.py
src/python/minnow_apps/: app_depth.py  app_gps.py  app_imu.py  app_motor.py  app_motor_contol.py
src/python/minnow_comms/: minnow_app_multiprocess.py  minnow_app_threaded.py  minnow_broker.py  test_thread.cpp
src/python/minnow_low_level_control/: HeadingControl.py  SurgeSpeedControl.py  controlconfig.py
src/python/minnow_motor_control/: HeadingControl.py  PitchControl.py  SurgeSpeedControl.py  controlconfig.py
src/python/ms5837/: MS5837.py
src/python/sandbox/flatbuffer_testing/: sample_monster.py
src/python/sandbox/low_level_control/: minnow_HeadingControl.py  minnow_PitchControl.py
src/python/sandbox/pub_sub_testing/: minnow_app_multiprocess.py  minnow_app_threaded.py  minnow_broker.py  minnow_pub_sub1.py  minnow_pub_sub2.py
src/python/topics/motor/: command.py  value.py
src/python/topics/nav/: depth.py  gps.py  imu.py
